test/files/neg/eta-expand-star.check
eta-expand-star.scala:6: error: too many arguments (found 2, expected 1) for method apply: (v1: Seq[T]): Unit in trait Function1
    g(1, 2)
         ^
1 error
